// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/protocol/v0/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v1/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v0/participant_transfer.proto";
import "com/digitalasset/canton/protocol/v0/topology.proto";
import "com/digitalasset/canton/protocol/v1/topology.proto";
import "com/digitalasset/canton/protocol/v0/causality.proto";
import "com/digitalasset/canton/protocol/v0/synchronization.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";

// Messages depending on both participant_transaction.proto and participant_transfer.proto.

message EnvelopeContent {
    oneof some_envelope_content {
        InformeeMessage informee_message = 1;
        v0.SignedProtocolMessage signed_message = 2;
        EncryptedViewMessage encrypted_view_message = 3;
        v0.DomainTopologyTransactionMessage domain_topology_transaction_message = 5;
        v0.TransferOutMediatorMessage transfer_out_mediator_message = 6;
        v0.TransferInMediatorMessage transfer_in_mediator_message = 7;
        v0.RootHashMessage root_hash_message = 8;
        v0.RegisterTopologyTransactionRequest register_topology_transaction_request = 9;
        v1.RegisterTopologyTransactionResponse register_topology_transaction_response = 10;
        v0.CausalityMessage causality_message = 11;
    }
}
